{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 27,
  "lineage": "a9bbed70-c43a-c9bf-d45d-ac30a6417cc9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:internet-gateway/igw-0b7534673288e8e47",
            "id": "igw-0b7534673288e8e47",
            "owner_id": "140147588849",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-igw"
            },
            "tags_all": {
              "Name": "dm-goit-igw"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7534673288e8e47",
            "id": "r-rtb-04e7ceb72fdbee9dc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-04e7ceb72fdbee9dc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:route-table/rtb-04e7ceb72fdbee9dc",
            "id": "rtb-04e7ceb72fdbee9dc",
            "owner_id": "140147588849",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "dm-goit-public-rt"
            },
            "tags_all": {
              "Name": "dm-goit-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bba622dfd254ed82",
            "region": "us-west-2",
            "route_table_id": "rtb-04e7ceb72fdbee9dc",
            "subnet_id": "subnet-0d8bef3d0614ff9cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024dc4319fffb46f6",
            "region": "us-west-2",
            "route_table_id": "rtb-04e7ceb72fdbee9dc",
            "subnet_id": "subnet-04c0626be96139be6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bd6e0f2b912423b",
            "region": "us-west-2",
            "route_table_id": "rtb-04e7ceb72fdbee9dc",
            "subnet_id": "subnet-031c5a16398503d4b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:subnet/subnet-07d102d736dab1ca9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d102d736dab1ca9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-private-subnet-1"
            },
            "tags_all": {
              "Name": "dm-goit-private-subnet-1"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-07d102d736dab1ca9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:subnet/subnet-06b70e96cc067d03b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b70e96cc067d03b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-private-subnet-2"
            },
            "tags_all": {
              "Name": "dm-goit-private-subnet-2"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-06b70e96cc067d03b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:subnet/subnet-03eaf0690272aa20b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03eaf0690272aa20b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-private-subnet-3"
            },
            "tags_all": {
              "Name": "dm-goit-private-subnet-3"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-03eaf0690272aa20b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:subnet/subnet-0d8bef3d0614ff9cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8bef3d0614ff9cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-public-subnet-1"
            },
            "tags_all": {
              "Name": "dm-goit-public-subnet-1"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-0d8bef3d0614ff9cd",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:subnet/subnet-04c0626be96139be6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c0626be96139be6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-public-subnet-2"
            },
            "tags_all": {
              "Name": "dm-goit-public-subnet-2"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-04c0626be96139be6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:subnet/subnet-031c5a16398503d4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-031c5a16398503d4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140147588849",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-public-subnet-3"
            },
            "tags_all": {
              "Name": "dm-goit-public-subnet-3"
            },
            "vpc_id": "vpc-0a473389d23c744c8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140147588849",
            "id": "subnet-031c5a16398503d4b",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:140147588849:vpc/vpc-0a473389d23c744c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07e43883b4df654c6",
            "default_route_table_id": "rtb-09908a2c5e20e4a51",
            "default_security_group_id": "sg-0e69d1a39d9752a77",
            "dhcp_options_id": "dopt-0d8e593a84d13328e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a473389d23c744c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09908a2c5e20e4a51",
            "owner_id": "140147588849",
            "region": "us-west-2",
            "tags": {
              "Name": "dm-goit-vpc"
            },
            "tags_all": {
              "Name": "dm-goit-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}